[gd_scene load_steps=22 format=3 uid="uid://uck06do5snq6"]

[ext_resource type="Texture2D" uid="uid://ct7b2lijh86bb" path="res://assets/ui/title-bg.png" id="1_gyk1r"]
[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_x6vnx"]
[ext_resource type="Texture2D" uid="uid://dbhqlsna1qk8m" path="res://assets/ui/title-siswa1.png" id="2_71mjh"]
[ext_resource type="AudioStream" uid="uid://dt7xvv0c2x311" path="res://assets/audio/bgm-title.ogg" id="3_0h7qf"]
[ext_resource type="Texture2D" uid="uid://bn8pp7v38vvto" path="res://assets/ui/title-siswa2.png" id="4_nc0sq"]
[ext_resource type="Texture2D" uid="uid://dlqr30lq02i3e" path="res://assets/ui/title-text.png" id="5_vb71e"]
[ext_resource type="Texture2D" uid="uid://c3athyklcsbt2" path="res://assets/ui/title-subtext.png" id="6_fy7sd"]

[sub_resource type="Animation" id="Animation_2rtgp"]
resource_name = "fadein"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("siswa-sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(400, 450), Vector2(400, 420), Vector2(400, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("siswa-sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fp3sh"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("siswa-sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(400, 450), Vector2(400, 480), Vector2(400, 450), Vector2(400, 420), Vector2(400, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("siswa-sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsauv"]
_data = {
"fadein": SubResource("Animation_2rtgp"),
"idle": SubResource("Animation_fp3sh")
}

[sub_resource type="Animation" id="Animation_u6e7j"]
resource_name = "fadein"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("siswa2-sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1530, 450), Vector2(1530, 420), Vector2(1530, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("siswa2-sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8vvau"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("siswa2-sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1530, 450), Vector2(1530, 480), Vector2(1530, 450), Vector2(1530, 420), Vector2(1530, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("siswa2-sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40xtl"]
_data = {
"fadein": SubResource("Animation_u6e7j"),
"idle": SubResource("Animation_8vvau")
}

[sub_resource type="Animation" id="Animation_1lwlg"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("judul-text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 540), Vector2(960, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("judul-text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1svyx"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("judul-text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(960, 540), Vector2(960, 560), Vector2(960, 540), Vector2(960, 520), Vector2(960, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("judul-text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ls3e3"]
_data = {
"fadein": SubResource("Animation_1lwlg"),
"idle": SubResource("Animation_1svyx")
}

[sub_resource type="Animation" id="Animation_4rm83"]
resource_name = "idle"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn-text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjfmp"]
_data = {
"idle": SubResource("Animation_4rm83")
}

[sub_resource type="Animation" id="Animation_ihh47"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5tpvr"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6c5mg"]
_data = {
"fadein": SubResource("Animation_ihh47"),
"fadeout": SubResource("Animation_5tpvr")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x6vnx")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_gyk1r")

[node name="audio-player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0h7qf")
bus = &"BGM"

[node name="siswa1" type="Node2D" parent="."]

[node name="siswa-sprite" type="Sprite2D" parent="siswa1"]
position = Vector2(400, 450)
texture = ExtResource("2_71mjh")

[node name="siswa-anim" type="AnimationPlayer" parent="siswa1"]
libraries = {
"": SubResource("AnimationLibrary_xsauv")
}

[node name="siswa2" type="Node2D" parent="."]

[node name="siswa2-sprite" type="Sprite2D" parent="siswa2"]
position = Vector2(1530, 443.333)
texture = ExtResource("4_nc0sq")

[node name="siswa2-anim" type="AnimationPlayer" parent="siswa2"]
libraries = {
"": SubResource("AnimationLibrary_40xtl")
}

[node name="judul" type="Node2D" parent="."]

[node name="judul-text" type="Sprite2D" parent="judul"]
modulate = Color(1, 1, 1, 0)
position = Vector2(960, 540)
texture = ExtResource("5_vb71e")

[node name="judul-anim" type="AnimationPlayer" parent="judul"]
libraries = {
"": SubResource("AnimationLibrary_ls3e3")
}

[node name="btn" type="Node2D" parent="."]

[node name="btn-text" type="Sprite2D" parent="btn"]
modulate = Color(1, 1, 1, 0)
position = Vector2(960, 900)
texture = ExtResource("6_fy7sd")

[node name="btn-anim" type="AnimationPlayer" parent="btn"]
libraries = {
"": SubResource("AnimationLibrary_bjfmp")
}

[node name="BlackOverlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1940.0
offset_bottom = 1088.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6c5mg")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="siswa1/siswa-anim" to="." method="_on_siswaanim_animation_finished"]
[connection signal="animation_finished" from="siswa2/siswa2-anim" to="." method="_on_siswa_2_anim_animation_finished"]
[connection signal="animation_finished" from="judul/judul-anim" to="." method="_on_judulanim_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
